# deepddg

./: .dockerignore  .gitignore  dockerfile  inference.py  pyproject.toml  readme.md  test.py
.github/workflows/: docker-build.yml
dashboard/: app.py  server.py
featurehub/: __init__.py
featurehub/esm_based_features/: __init__.py  const.py  esm_based_features.py
featurehub/sequence_based_features/: __init__.py  aaindex1.csv  amino_acid.py  base_classes.py  const.py  intrinsic_solubility.py  pseaac_parameters.csv  sequence.py  sequence_based_features.py  utils.py
featurehub/structure_based_features/: __init__.py  const.py  rasa.py  rasa2acc20.py  structure_based_features.py
license/: copyright
macroddg/: __init__.py  cli.py  custom_exceptions.py  feature_generator.py  macroddg.py  utils.py
macroddg/app/launching/: main.py  pages.py
